fix overflow and ui library page

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   --headerHeight: 50px;
   --elementHeight: 50px;
   --colorPrimary: #cdcdcd;
-  --colorSecondary: #e0e0e0;
+  --colorPrimaryAlternate: #dcdcdc;
+  --colorSecondary: #e7e7e7;
   --colorAccent: #ff0000;
   --colorText: #000000;
   --space: 10px;
@@ -39,12 +40,12 @@ h1 {
 
 h2 {
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h3 {
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 p {
@@ -54,7 +55,7 @@ p {
 
 button {
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 400;
   background: none;
   border: none;
   cursor: pointer;
@@ -83,14 +84,13 @@ li {
 }
 
 .main {
+  position: relative;
   height: calc(100vh - var(--headerHeight) - var(--elementHeight));
   display: flex;
   justify-content: center;
   align-items: center;
   background: var(--colorSecondary);
   color: var(--colorText);
-  padding: var(--space);
-  overflow-y: auto;
 }
 
 .tabs {
@@ -119,17 +119,20 @@ li {
   opacity: 1;
 }
 
-/* TRACKER --- */
-/* TRACKER --- */
-/* TRACKER --- */
-
-.tracker {
-  height: 100%;
+.tracker,
+.library {
+  height: calc(100% - 20px);
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--space);
+  padding: var(--space);
+  overflow-y: auto;
 }
+
+/* TRACKER --- */
+/* TRACKER --- */
+/* TRACKER --- */
 
 /* PROGRESS --- */
 
@@ -179,20 +182,19 @@ li {
 /* LIBRARY --- */
 /* LIBRARY --- */
 
-.library {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: var(--space);
-}
-
 /* SAVED FOODS --- */
 
 .section-title {
   height: var(--elementHeight);
   display: flex;
   align-items: center;
+  padding-left: 10px;
+  background: var(--colorPrimary);
+}
+
+.title-row {
+  margin-top: 10px;
+  background: var(--colorSecondary);
 }
 
 .row {
@@ -202,77 +204,67 @@ li {
   background: var(--colorPrimary);
 }
 
-.title-row {
-  margin-left: -5px;
-}
-
 .empty-table-error-message {
   padding: 10px 0;
   padding-left: 5px;
 }
 
 .cell {
-  padding: 5px 0;
+  padding: 10px 0;
   padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .cell-food-name,
 .input-food-name {
-  width: 35%;
+  width: 50%;
 }
 
 .cell-grams-of-protein,
-.cell-measurement,
-.cell-delete {
+.cell-calories {
   width: 20%;
+  text-align: right;
 }
 
 .cell-delete {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 10%;
 }
 
 /* ADD FOOD --- */
 
 .add-food {
   min-height: var(--elementHeight);
-  padding: 0 var(--space);
-  background: var(--colorPrimary);
 }
 
 .add-food-btn {
+  height: var(--elementHeight);
+  padding: 0 10px;
   text-align: left;
+  background-color: var(--colorPrimary);
 }
 
 .form-group {
   width: 100%;
   display: flex;
-  gap: 10px;
+  flex-direction: column;
 }
 
 .form-group input {
+  margin-top: 10px;
   padding: 10px 0;
-  padding-left: 5px;
-  border: none;
-}
-
-.input-food-name {
-  width: 35%;
-}
-
-.input-grams-of-protein,
-.input-measurement,
-.input-submit {
-  width: 20%;
-}
-
-.input-submit {
   padding-left: 10px;
+  border: none;
+  width: calc(100% - 10px);
+}
+
+.input-submit {
+  height: var(--elementHeight);
+  margin-top: 10px;
+  padding: 10px 0;
   background: var(--colorAccent);
-  text-align: left;
+  width: 25%;
 }
 
 .form-error-message {
